fixed images not showing

--- a/css/index.css
+++ b/css/index.css
@@ -8,7 +8,7 @@
 .hero {
     height: 100vh;
     width: 100%;
-    background-image: url(../PortfolioResume/Images/gardenia-1.jpg);
+    background-image: url(../Images/pink\ gardenia.jpg);
     background-size: cover;
     background-position: center;
 }
